syntax = "proto3";

package logic;

service Logic {
    rpc SendMessage(MessageRequest)returns(SendReply){}
    rpc ReceiveMessage(MessageRequest)returns(ReceiveReply){}
}

message MessageRequest{
    int32 MsgType = 1;
    string SequenceId = 2;
    string ConnId = 3;
    string Sender = 4;
    string Receiver = 5;
    string Body = 6;
}


message SendReply{
    bool Status = 1;
    string Message = 2;
}

message ReceiveReply{
    bool Status = 1;
    string Message = 2;
}
